<resources>
    <string name="app_name">Titanio</string>
    <string name="label_login">Login</string>
    <string name="label_signup">Sign up</string>


    <string name="title_signup">Sign up</string>
    <string name="title_app_setup">App Setup</string>
    <string name="title_app_otp">OTP Verification</string>
    <string name="title_scan_qr_code">Scan QR Code</string>
    <string name="title_suit_case_detail">Suit Case Detail</string>
    <string name="navigation_suit_case_added">Suit Case Added</string>
    <string name="validate_your_suitcase_warranty_luggage_recovery_system">Validate your Suitcase Warranty &amp; Luggage Recovery System</string>
    <string name="your_suit_case_has_been_registered">Your suit case has been registered with global warranty and suitcase’ lost &amp; found system is activated.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_intorduction">Intorduction screen</string>
    <string name="luggae_desc">Our Infinity Subscription Covers Your\nSuitcase With An Unlimited\nReplacement Warranty*. You Break It\nWe Replace Or Fix It.</string>
    <string name="navigation_subscription_plan">Subscription Plan</string>

    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_search">Search</string>
    <string name="navigation_apple_tracking">Apple Tracking</string>
    <string name="navigation_create_group">Create Group</string>
    <string name="navigation_friends_in_group">Friends in Groups</string>
    <string name="navigation_profile_completed">Profile Completed</string>
    <string name="post_detail_pic">Post Detail Pic</string>
    <string name="comment_one">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.</string>
    <string name="comment_two">Neque 😊 porro quisquam est qui dolorem quia dolor sit amet.</string>
    <string name="comment_three">Neque porro quisquam est 👍</string>
    <string name="comment_four">Quisquam estqui dolorem quia sit amet, consectetur 🙌</string>
    <string name="title_profile">Profile</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_other_user_profile">Other User Profile</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_subscription">Subscription</string>
    <string name="menu_my_groups">My Groups</string>
    <string name="menu_flight_tracker_pickup"><![CDATA[Flight Tracker & Pickup]]></string>
    <string name="menu_pickup_requests">Pickup Requests</string>
    <string name="menu_my_pickups">My Pickups</string>
    <string name="menu_my_flights">My Flights</string>
    <string name="menu_shared_flights">Shared Flights</string>
    <string name="menu_my_luggage">My Luggage</string>
    <string name="menu_my_friends">My Friends</string>
    <string name="menu_timeline">Timeline</string>
    <string name="menu_luggage_found">Luggage Found</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_our_brands">Our Brands</string>
    <string name="menu_invite_friends">Invite Friends</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_report_us">Report Us</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="title_chat_user">Chat User</string>
    <string name="title_notification">Notification</string>
    <string name="title_post_detail">I Did Skydiving For The First Time</string>
    <string name="username_post_detail">Ellis John</string>
    <string name="time_ago_post_detail">1 day ago</string>
    <string name="title_post_detail_two">Spending Holidays with Family</string>
    <string name="username_post_detail_two">Dale Houston</string>
    <string name="time_ago_post_detail_two">10 min</string>

    <string name="title_found_item_owner">Found Item Owner</string>
    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>

    <string name="title_add_post">Add Post</string>
    <string name="title_subsction_plan_drawer">Subscription Plan</string>
    <string name="title_thank_you">Thank You</string>
    <string name="title_timeline">TimeLine</string>
    <string name="title_timeline_detail">TimeLine Detail</string>
    <string name="title_our_brands">Our Brands</string>
    <string name="title_luggage_found">Luggage Found</string>
    <string name="title_found_item">Found Item</string>
    <string name="title_my_group">My Group</string>
    <string name="title_invite_friends">Invite Friends</string>
    <string name="title_new_group">Add New Group</string>
    <string name="add_more"><u>Add More</u></string>
    <string name="select_all"><u>Select All</u></string>
    <string name="title_group_detail">Group Detail</string>
    <string name="title_group_edit">Edit Group</string>
    <string name="title_add_more_friends">Add More Friends</string>
    <string name="title_filter_fragment">Filter</string>
    <string name="title_my_luggage">My Luggage</string>
    <string name="claim_warranty"><u>Claim Warranty</u></string>
    <string name="title_pickup_request">Pick Up Request</string>
    <string name="title_my_pickup">My Pickups</string>
    <string name="title_claim_warranty_qr_code_scan">Claim Warranty Qr Code Scan</string>
    <string name="title_claim_warranty">Claim Warranty</string>
    <string name="title_add_new_suitcaes_luggage">Add New Suitcase Luggage</string>
    <string name="title_nav_add_new_suitcase_detail">Add New Suitcase Detail</string>
    <string name="title_pickup_friend">Pickup Friend</string>
    <string name="navigation_suit_case_confirm_detail_added">Suit Case Confrim Detail Added</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="title_warranty_log">Warranty Log</string>
    <string name="title_my_friends">My Friends</string>
    <string name="title_add_in_group">Add In Group Fragment</string>
    <string name="title_report_us_fragment">Report Us</string>
    <string name="text_privacy_policy">Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc. concept to the people. In case a person wish to gift 200 free meals to common people, he can pay the cost to the shop keeper. The shop keeper generates 200 free coupons in this app. The lucky one can pick the free gift coupon visible on the mobile app and redeem it from the shop by the shopkeeper. Such shops foreseeing adequate developments in the field of business. This free coupons improves customer and seller engagement.\n\n There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</string>
    <string name="title_settings_fragment">Settings</string>
    <string name="title_privacy_policy_fragment">Privacy Policy</string>
    <string name="title_terms_and_conditions_fragment">Terrms and Condtions</string>
    <string name="title_share_flights_fragment">Share Flight Fragment</string>
    <string name="title_my_flights_fragment">My Flights</string>
    <string name="title_my_friends_pickup_fragment">My Friends Pickup</string>
    <string name="title_my_friends_pickup_request_send_fragment">My Friends Pickup Request Send</string>
</resources>