<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.titanio.app.ui.activities.home.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">


        <action
            android:id="@+id/action_nav_home_to_navigation_post_detail_pic"
            app:destination="@id/navigation_post_detail_pic" />
        <action
            android:id="@+id/action_nav_home_to_navigation_other_user_profile"
            app:destination="@id/navigation_other_user_profile" />

        <action
            android:id="@+id/action_nav_home_to_nav_notifications"
            app:destination="@id/nav_notifications" />
        <action
            android:id="@+id/action_nav_home_to_navigation_filter"
            app:destination="@id/navigation_filter" />

    </fragment>


    <fragment
        android:id="@+id/nav_subscription"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.SubscriptionPlanFragment"
        android:label="Subscription"
        tools:layout="@layout/fragment_subscription_plan_drawer">


        <action
            android:id="@+id/action_nav_subscription_to_navigation_thank_you"
            app:destination="@id/navigation_thank_you" />
    </fragment>


    <fragment
        android:id="@+id/navigation_thank_you"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.ThankYouFragment"
        android:label="@string/title_thank_you"
        tools:layout="@layout/fragment_thank_you">

    </fragment>

    <fragment
        android:id="@+id/nav_my_groups"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.MyGroupsFragment"
        android:label="@string/title_my_group"
        tools:layout="@layout/fragment_my_groups">
        <action
            android:id="@+id/action_nav_my_groups_to_navigation_add_new_group"
            app:destination="@id/navigation_add_new_group" />
        <action
            android:id="@+id/action_nav_my_groups_to_navigation_group_detail"
            app:destination="@id/navigation_group_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_my_luggage"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.MyLuggageFragment"
        android:label="@string/title_my_luggage"
        tools:layout="@layout/fragment_my_luggage">
        <action
            android:id="@+id/action_nav_my_luggage_to_nav_notifications"
            app:destination="@id/nav_notifications" />
        <action
            android:id="@+id/action_nav_my_luggage_to_nav_subscription"
            app:destination="@id/nav_subscription" />
        <action
            android:id="@+id/action_nav_my_luggage_to_navigation_claim_warranty_qrcode_scan"
            app:destination="@id/navigation_claim_warranty_qrcode_scan" />
        <action
            android:id="@+id/action_nav_my_luggage_to_nav_add_new_suitcase_luggage"
            app:destination="@id/nav_add_new_suitcase_luggage" />
        <action
            android:id="@+id/action_nav_my_luggage_to_nav_warranty_log"
            app:destination="@id/nav_warranty_log" />
    </fragment>

    <fragment
        android:id="@+id/nav_warranty_log"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.WarrantyLogFragment"
        android:label="@string/title_warranty_log"
        tools:layout="@layout/frgament_warranty_log"></fragment>
    <fragment
        android:id="@+id/nav_add_new_suitcase_luggage"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.AddNewSuitCaseFragment"
        android:label="@string/title_add_new_suitcaes_luggage"
        tools:layout="@layout/fragment_add_new_suitcaes_luggage">

        <action
            android:id="@+id/action_nav_add_new_suitcase_luggage_to_nav_add_new_suitcase_detail"
            app:destination="@id/nav_add_new_suitcase_detail" />

    </fragment>

    <fragment
        android:id="@+id/nav_add_new_suitcase_detail"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.AddSuitcaseDetailsFragment"
        android:label="@string/title_nav_add_new_suitcase_detail"
        tools:layout="@layout/fragment_add_suit_case_detail">

        <action
            android:id="@+id/action_nav_add_new_suitcase_detail_to_nav_notifications"
            app:destination="@id/nav_notifications" />
        <action
            android:id="@+id/action_nav_add_new_suitcase_detail_to_nav_add_new_suitcase_luggage"
            app:destination="@id/nav_add_new_suitcase_luggage" />
        <action
            android:id="@+id/action_nav_add_new_suitcase_detail_to_navigation_suit_case_confrim_Detail"
            app:destination="@id/navigation_suit_case_confrim_Detail" />

    </fragment>

    <fragment
        android:id="@+id/navigation_suit_case_confrim_Detail"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.SuitCaseConfirmDetailFragment"
        android:label="@string/navigation_suit_case_confirm_detail_added"
        tools:layout="@layout/fargment_suitcase_confirm_detail_added">

        <action
            android:id="@+id/action_navigation_suit_case_confrim_Detail_to_nav_my_luggage"
            app:destination="@id/nav_my_luggage" />
        <action
            android:id="@+id/action_navigation_suit_case_confrim_Detail_to_nav_add_new_suitcase_luggage"
            app:destination="@id/nav_add_new_suitcase_luggage" />
    </fragment>

    <fragment
        android:id="@+id/navigation_claim_warranty_qrcode_scan"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.ClaimWarrantyScanQrCode"
        android:label="@string/title_claim_warranty_qr_code_scan"
        tools:layout="@layout/fragmnt_claim_warranty_scan_qr_code">

        <action
            android:id="@+id/action_navigation_claim_warranty_qrcode_scan_to_navigation_claim_warranty"
            app:destination="@id/navigation_claim_warranty" />
    </fragment>
    <fragment
        android:id="@+id/navigation_claim_warranty"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.ClaimWarrantyFragment"
        android:label="@string/title_claim_warranty"
        tools:layout="@layout/fragment_claim_warranty">


    </fragment>

    <fragment
        android:id="@+id/navigation_other_user_profile"
        android:name="com.titanio.app.ui.activities.home.fragments.OtherUserProfileFragment"
        android:label="@string/title_other_user_profile"
        tools:layout="@layout/fragment_other_user_profile">


        <action
            android:id="@+id/action_navigation_other_user_profile_to_navigation_chat_user3"
            app:destination="@id/navigation_chat_user" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chat_user"
        android:name="com.titanio.app.ui.activities.home.fragments.ChatUserFragment"
        android:label="@string/title_chat_user"
        tools:layout="@layout/fragment_chat_user">

        <action
            android:id="@+id/action_navigation_chat_user_to_navigation_other_user_profile"
            app:destination="@id/navigation_other_user_profile" />
    </fragment>
    <fragment
        android:id="@+id/navigation_time_line"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.TimeLineFragments"
        android:label="@string/title_timeline"
        tools:layout="@layout/fragment_time_line">


        <action
            android:id="@+id/action_navigation_time_line_to_navigation_time_line_detail"
            app:destination="@id/navigation_time_line_detail" />
        <action
            android:id="@+id/action_navigation_time_line_to_nav_notifications"
            app:destination="@id/nav_notifications" />

    </fragment>
    <fragment
        android:id="@+id/navigation_time_line_detail"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.TimeLineDetailFragment"
        android:label="@string/title_timeline_detail"
        tools:layout="@layout/fragment_timeline_detail">

    </fragment>

    <fragment
        android:id="@+id/nav_my_profile"
        android:name="com.titanio.app.ui.activities.home.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_nav_my_profile_to_navigation_edit_profile"
            app:destination="@id/navigation_edit_profile" />
        <action
            android:id="@+id/action_nav_my_profile_to_navigation_app_otp"
            app:destination="@id/navigation_app_otp" />
    </fragment>

    <fragment
        android:id="@+id/navigation_app_otp"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.OtpVerifyFragment"
        android:label="@string/title_app_otp"
        tools:layout="@layout/fragment_otp_verification">

    </fragment>
    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.titanio.app.ui.activities.home.fragments.EditProfileFragment"
        android:label="@string/title_edit_profile"
        tools:layout="@layout/fragment_edit_profile">

    </fragment>

    <fragment
        android:id="@+id/navigation_post_detail_pic"
        android:name="com.titanio.app.ui.activities.home.fragments.PostDetailPicFragment"
        android:label="@string/post_detail_pic"
        tools:layout="@layout/fragment_post_detail_pic">

    </fragment>

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.titanio.app.ui.activities.home.fragments.NotificationFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_notification">

        <action
            android:id="@+id/action_nav_notifications_to_navigation_found_item_owner"
            app:destination="@id/navigation_found_item_owner" />
    </fragment>

    <fragment
        android:id="@+id/navigation_found_item_owner"
        android:name="com.titanio.app.ui.activities.home.fragments.FoundItemOwnerFragment"
        android:label="@string/title_found_item_owner"
        tools:layout="@layout/fragment_found_item_owner">

    </fragment>

    <fragment
        android:id="@+id/nav_luggage_found"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.LuggageFoundFragment"
        android:label="@string/title_luggage_found"
        tools:layout="@layout/fragment_luggage_found">

        <action
            android:id="@+id/action_nav_luggage_found_to_nav_found_item"
            app:destination="@id/nav_found_item" />
    </fragment>

    <fragment
        android:id="@+id/nav_found_item"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.FoundItemFragment"
        android:label="@string/title_found_item"
        tools:layout="@layout/fragment_found_item">

        <action
            android:id="@+id/action_nav_found_item_to_navigation_thank_you"
            app:destination="@id/navigation_thank_you" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.titanio.app.ui.activities.home.fragments.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">

    </fragment>
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.titanio.app.ui.activities.home.fragments.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat">


        <action
            android:id="@+id/action_navigation_chat_to_navigation_chat_user3"
            app:destination="@id/navigation_chat_user" />
        <action
            android:id="@+id/action_navigation_chat_to_navigation_other_user_profile2"
            app:destination="@id/navigation_other_user_profile" />
        <action
            android:id="@+id/action_navigation_chat_to_nav_notifications"
            app:destination="@id/nav_notifications" />
    </fragment>


    <fragment
        android:id="@+id/navigation_add_post"
        android:name="com.titanio.app.ui.activities.home.fragments.AddPostFrgagment"
        android:label="@string/title_add_post"
        tools:layout="@layout/fragment_add_post">

        <action
            android:id="@+id/action_navigation_add_post_to_nav_my_profile"
            app:destination="@id/nav_my_profile" />
    </fragment>


    <fragment
        android:id="@+id/nav_invite_friends"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.InviteFriendsFragment"
        android:label="@string/title_invite_friends"
        tools:layout="@layout/fragment_invite_friends">
        <action
            android:id="@+id/action_nav_invite_friends_to_nav_notifications"
            app:destination="@id/nav_notifications" />
    </fragment>


    <fragment
        android:id="@+id/nav_our_brands"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.OurBrandsFragment"
        android:label="@string/title_our_brands"
        tools:layout="@layout/fragment_our_brands">
        <action
            android:id="@+id/action_nav_our_brands_to_nav_notifications"
            app:destination="@id/nav_notifications" />
    </fragment>
    <fragment
        android:id="@+id/navigation_add_new_group"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.AddNewGroupFragment"
        android:label="@string/title_new_group"
        tools:layout="@layout/fragment_add_new_group">

    </fragment>

    <fragment
        android:id="@+id/navigation_group_detail"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.GroupDetailFragment"
        android:label="@string/title_group_detail"
        tools:layout="@layout/fragment_group_detail">


        <action
            android:id="@+id/action_navigation_group_detail_to_navigation_group_edit2"
            app:destination="@id/navigation_group_edit" />
        <action
            android:id="@+id/action_navigation_group_detail_to_navigation_add_more_friends3"
            app:destination="@id/navigation_add_more_friends" />

    </fragment>

    <fragment
        android:id="@+id/navigation_group_edit"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.EditGroupFragment"
        android:label="@string/title_group_edit"
        tools:layout="@layout/fragment_edit_group">


        <action
            android:id="@+id/action_navigation_group_edit_to_navigation_add_more_friends3"
            app:destination="@id/navigation_add_more_friends" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_more_friends"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.AddMoreFreidnsFragement"
        android:label="@string/title_add_more_friends"
        tools:layout="@layout/fragment_add_more_friends">

    </fragment>

    <fragment
        android:id="@+id/nav_pickup_requests"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.PickUpRequestFragment"
        android:label="@string/title_pickup_request"
        tools:layout="@layout/fragment_pickuprequest">

        <action
            android:id="@+id/action_nav_pickup_requests_to_nav_my_pickups"
            app:destination="@id/nav_my_pickups" />
    </fragment>

    <fragment
        android:id="@+id/nav_my_pickups"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.MyPickUpFragment"
        android:label="@string/title_my_pickup"
        tools:layout="@layout/fragment_my_pickup">

        <action
            android:id="@+id/action_nav_my_pickups_to_nav_pickup_friend"
            app:destination="@id/nav_pickup_friend" />
    </fragment>

    <fragment
        android:id="@+id/nav_pickup_friend"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.PickUpFriendFragment"
        android:label="@string/title_pickup_friend"
        tools:layout="@layout/fragment_pickup_friend">

        <action
            android:id="@+id/action_nav_pickup_friend_to_navigation_chat_user"
            app:destination="@id/navigation_chat_user" />
    </fragment>


    <fragment
        android:id="@+id/nav_my_friends"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.MyFriendsFragment"
        android:label="@string/title_my_friends"
        tools:layout="@layout/fragment_my_friends">
        <action
            android:id="@+id/action_nav_my_friends_to_navigation_chat_user"
            app:destination="@id/navigation_chat_user" />
        <action
            android:id="@+id/action_nav_my_friends_to_nav_invite_friends"
            app:destination="@id/nav_invite_friends" />
        <action
            android:id="@+id/action_nav_my_friends_to_navigation_add_more_friends"
            app:destination="@id/navigation_add_more_friends" />
        <action
            android:id="@+id/action_nav_my_friends_to_nav_add_in_group"
            app:destination="@id/nav_add_in_group" />
    </fragment>



    <fragment
        android:id="@+id/nav_add_in_group"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.AddInGroupFragment"
        android:label="@string/title_add_in_group"
        tools:layout="@layout/fragment_add_in_group">

    </fragment>


    <fragment
        android:id="@+id/navigation_filter"
        android:name="com.titanio.app.ui.activities.home.fragments.FilterFragment"
        android:label="@string/title_filter_fragment"
        tools:layout="@layout/fragment_filter">

    </fragment>
    <fragment
        android:id="@+id/nav_report_us"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.ReportUsFragment"
        android:label="@string/title_report_us_fragment"
        tools:layout="@layout/fragment_report_us">

        <action
            android:id="@+id/action_nav_report_us_to_navigation_thank_you"
            app:destination="@id/navigation_thank_you" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.SettingsFragment"
        android:label="@string/title_settings_fragment"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_nav_settings_to_nav_privacy_policy"
            app:destination="@id/nav_privacy_policy" />
        <action
            android:id="@+id/action_nav_settings_to_nav_terms_and_conditions"
            app:destination="@id/nav_terms_and_conditions" />
    </fragment>

    <fragment
        android:id="@+id/nav_privacy_policy"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.PrivacyPolicyFragment"
        android:label="@string/title_privacy_policy_fragment"
        tools:layout="@layout/fragment_privacy_policy">

    </fragment>


    <fragment
        android:id="@+id/nav_terms_and_conditions"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.TermsAndConditionsFragment"
        android:label="@string/title_terms_and_conditions_fragment"
        tools:layout="@layout/fragment_terms_and_conditions">
    </fragment>

    <fragment
        android:id="@+id/nav_shared_flights"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.ShareFlightsFragment"
        android:label="@string/title_share_flights_fragment"
        tools:layout="@layout/fragment_share_flights">
    </fragment>



    <fragment
        android:id="@+id/nav_my_flights"
        android:name="com.titanio.app.ui.activities.home.drawer_fragment.MyFlightsFragment"
        android:label="@string/title_my_flights_fragment"
        tools:layout="@layout/fragment_my_flights">
    </fragment>

</navigation>