<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_main_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.titanio.app.ui.activities.home.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

    </fragment>


    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.titanio.app.ui.activities.home.fragments.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat">

    </fragment>


    <fragment
        android:id="@+id/navigation_search"
        android:name="com.titanio.app.ui.activities.home.fragments.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">

    </fragment>

</navigation>